update khmer copies and fix khmer overlapping text

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8406,13 +8406,11 @@ table {
 h1 {
   font-size: 48px;
   font-weight: 700;
-  line-height: 50px;
 }
 
 h2 {
   font-size: 37px;
   font-weight: 700;
-  line-height: 38px;
 }
 
 h3 {
@@ -9374,13 +9372,12 @@ strong {
   font-family: "montserrat", "Helvetica", "Arial", "sans-serif";
   font-size: 36px;
   margin-top: 20px;
-  line-height: 42px;
+  line-height: 1.4;
   margin-bottom: 20px;
 }
 
 .khmer-lang .banner-text h1 {
   font-size: 30px;
-  line-height: 38px;
 }
 
 .banner-text h1 i {
@@ -9390,26 +9387,26 @@ strong {
 @media (min-width: 374px) {
   .banner-text h1 {
     font-size: 45px;
-    line-height: 52px;
+    line-height: 1.4;
   }
 
   .khmer-lang .banner-text h1 {
     font-size: 38px;
-    line-height: 44px;
+    line-height: 1.4;
   }
 }
 
 @media (min-width: 768px) {
   .banner-text h1 {
     font-size: 73px;
-    line-height: 80px;
+    line-height: 1.4;
     margin-top: 10px;
     xmargin-bottom: 90px;
   }
 
   .khmer-lang .banner-text h1 {
     font-size: 60px;
-    line-height: 70px;
+    line-height: 1.4;
   }
 
   .banner-text h1 br {
@@ -9655,7 +9652,7 @@ strong {
 .layout-1 .text-content h3, .layout-2 .text-content h3 {
   font-size: 21px;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 1.4;
   margin-bottom: 10px;
   font-family: "roboto", "Helvetica", "Arial", "sans-serif";
   font-weight: 300;
@@ -9664,7 +9661,7 @@ strong {
 @media (min-width: 374px) {
   .layout-1 .text-content h3, .layout-2 .text-content h3 {
     font-size: 30px;
-    line-height: 42px;
+    line-height: 1.4;
   }
 }
 
@@ -9812,7 +9809,7 @@ strong {
 @media (min-width: 374px) {
   .layout-2 .text-content h3 {
     font-size: 24px;
-    line-height: 32px;
+    line-height: 1.4;
     margin-bottom: 18px;
   }
 }
@@ -9820,7 +9817,7 @@ strong {
 @media (min-width: 768px) {
   .layout-2 .text-content h3 {
     font-size: 30px;
-    line-height: 40px;
+    line-height: 1.4;
     margin-bottom: 18px;
   }
 }
@@ -9828,7 +9825,7 @@ strong {
 @media (min-width: 991px) {
   .layout-2 .text-content h3 {
     font-size: 45px;
-    line-height: 55px;
+    line-height: 1.4;
     max-width: 550px;
   }
 }
@@ -10177,14 +10174,14 @@ strong {
 @media (min-width: 374px) {
   .layout-3 .text-content h3 {
     font-size: 28px;
-    line-height: 36px;
+    line-height: 1.4;
   }
 }
 
 @media (min-width: 768px) {
   .layout-3 .text-content h3 {
     font-size: 45px;
-    line-height: 55px;
+    line-height: 1.4;
   }
 }
 
@@ -10232,7 +10229,7 @@ strong {
 @media (min-width: 374px) {
   .flex-item h2 {
     font-size: 45px;
-    line-height: 50px;
+    line-height: 1.4;
   }
 }
 
@@ -10241,7 +10238,7 @@ strong {
     text-align: center;
     width: 100%;
     font-size: 63px;
-    line-height: 70px;
+    line-height: 1.4;
   }
 }
 
@@ -10553,7 +10550,7 @@ input::-webkit-inner-spin-button {
 .required-tooltip p {
   font-size: 12px;
   color: #bd1919;
-  line-height: 14px;
+  line-height: 1.3;
 }
 
 .required-tooltip p span {
@@ -11904,7 +11901,7 @@ table {
 
 #layout-4 h3 {
   font-size: 24px;
-  line-height: 32px;
+  line-height: 1.4;
   margin-bottom: 18px;
   font-weight: 300;
   font-family: "roboto", "Helvetica", "Arial", "sans-serif";
@@ -11940,7 +11937,7 @@ table {
 @media (min-width: 768px) {
   #layout-4 h3 {
     font-size: 30px;
-    line-height: 40px;
+    line-height: 1.4;
     margin-bottom: 18px;
   }
 
@@ -11953,7 +11950,7 @@ table {
 @media (min-width: 991px) {
   #layout-4 h3 {
     font-size: 45px;
-    line-height: 55px;
+    line-height: 1.4;
   }
 }
 
